--- a/jameblog/_config.yml
+++ b/jameblog/_config.yml
@@ -25,10 +25,10 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://realja.me" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: real__jame
-github_username: atomicchocolate
+# github_username: atomicchocolate
 
 # Build settings
-theme: minima
+theme: realjame
 plugins:
   - jekyll-feed
 # Exclude from processing.
