Turn the heavily modified blog theme into it's own Ruby gem (still a part of this monorepo)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,12 @@
 version: "3.8"
 services:
+  jekyllbuild:
+    build:
+      context: -
+      args:
+        build-command: "bundle exec jekyll serve --watch --drafts --incremental --config _config-dev.yml"
+    volumes:
+      - "./jameblog:/srv/jekyll"
   nginx:
     image: nginx:latest
     container_name: realja.me
