--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,15 @@ services:
   #   command: "bundle; jekyll build"
   #   volumes:
   #     - "./jameblog:/srv/jekyll"
-  blog:
-    image: nginx:latest
-    container_name: realja.me_blog
-    volumes:
-      - "./jameblog/_site:/usr/share/nginx/html"
-    ports:
-      - 1100:80
-      - 1101:443
-    restart: unless-stopped   
+  # blog:
+  #   image: nginx:latest
+  #   container_name: realja.me_blog
+  #   volumes:
+  #     - "./jameblog/_site:/usr/share/nginx/html"
+  #   ports:
+  #     - 1100:80
+  #     - 1101:443
+  #   restart: unless-stopped   
   website:
     image: nginx:latest
     container_name: realja.me
