--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,12 @@
 version: "3.8"
-# TODO: figure out how to build the Jekyll blog in a separate Docker service so it's easier to get started without syncing the build on my dev computer over GitHub.
-services:
-  # jekyllbuild:
-  #   image: jekyll/jekyll:4.2.2
-  #   command: "bundle; jekyll build"
-  #   volumes:
-  #     - "./jameblog:/srv/jekyll"
-  # blog:
-  #   image: nginx:latest
-  #   container_name: realja.me_blog
-  #   volumes:
-  #     - "./jameblog/_site:/usr/share/nginx/html"
-  #   ports:
-  #     - 1100:80
-  #     - 1101:443
-  #   restart: unless-stopped   
+services: 
   website:
-    image: nginx:latest
+    build: .
     container_name: realja.me
-    volumes:
-      - ./src:/usr/share/nginx/html
-      - "./jameblog/_site:/usr/share/nginx/html/blog"
     ports:
       - 1000:80
       - 1001:443
+    environment:
+      - JEKYLL_UID=1000
+      - JEKYLL_GID=1000
     restart: unless-stopped
