--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 version: "3.8"
-services: 
+services:
   website:
     build: .
     container_name: realja.me
@@ -9,4 +9,6 @@ services:
     environment:
       - JEKYLL_UID=1000
       - JEKYLL_GID=1000
+    # volumes:
+    #   - ./nginx.conf:/etc/nginx/nginx.conf:ro
     restart: unless-stopped
