--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,4 +13,4 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           echo "${{ secrets.SSH_KNOWN_HOSTS }}" > ~/.ssh/known_hosts
       - name: Deploy
-        run: ssh -4 root@realja.me "cd ~/realjame && git fetch origin master && git reset --hard origin/master && docker-compose up --remove-orphans --detach" # && git fetch && git checkout HEAD src"
+        run: ssh -4 root@realja.me "cd ~/realjame && git fetch origin master && git reset --hard origin/master && docker-compose up --build --remove-orphans --detach" # && git fetch && git checkout HEAD src"
