Update social handles and add SEO tags to main website (gotta switch the main site to Jekyll some day...)

--- a/jameblog/_config.yml
+++ b/jameblog/_config.yml
@@ -21,11 +21,11 @@
 title: realjame - blog
 email: james@realja.me
 description: >- # this means to ignore newlines until "baseurl:"
-  My writings and stuff.
+  I post my writings, announcements, and other stuff here.
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://realja.me" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: real__jame
-# github_username: atomicchocolate
+# github_username: real-jame
 
 # Build settings
 plugins:
