--- a/jameblog/_config.yml
+++ b/jameblog/_config.yml
@@ -26,6 +26,7 @@ baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://realja.me" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: real__jame
 # github_username: real-jame
+permalink: /:title
 
 # Build settings
 plugins:
