Fix nginx not having .html extensions for blog posts - can't for the life of me figure out how to make it omit those

--- a/jameblog/_config.yml
+++ b/jameblog/_config.yml
@@ -26,7 +26,7 @@ baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://realja.me" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: real__jame
 # github_username: real-jame
-permalink: /:title
+permalink: /:title.html
 
 # Build settings
 plugins:
