--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,14 @@
 version: "3.8"
 services:
-  jekyll:
-    image: jekyll/jekyll:latest
-    environment:
-      - JEKYLL_ENV=production
-      - JEKYLL_UID=1000
-      - JEKYLL_GID=1000
-    command: jekyll serve --verbose
+  website:
+    build: .
     container_name: realja.me
     ports:
-      - 1000:4000
-    volumes:
-      - ./src:/srv/jekyll:rw
+      - 1000:80
+      - 1001:443
+    environment:
+      - JEKYLL_UID=1000
+      - JEKYLL_GID=1000
+    # volumes:
+    #   - ./nginx.conf:/etc/nginx/nginx.conf:ro
     restart: unless-stopped
