--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,12 @@
-server {
-    server_name realja.me;
+events {
 
-    rewrite ^/(.*)\.html /$1 permanent;
+}
+
+http {
+    server {
+        listen 80;
+        listen [::]:80;
+
+        rewrite ^/(.*)\.html /$1 permanent;
+    }
 }
