--- a/nginx.conf
+++ b/nginx.conf
@@ -4,9 +4,15 @@ events {
 
 http {
     server {
+        server_name realja.me;
         listen 80;
         listen [::]:80;
 
-        rewrite ^/(.*)\.html /$1 permanent;
+        location / {
+            if ($request_uri ~ ^/(.*)\.html(\?|$)) {
+                return 302 /$1;
+            }
+            try_files $uri $uri.html $uri/ =404;
+        }
     }
 }
