--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,9 @@ http {
         listen [::]:80;
 
         location / {
+            if ($request_uri ~ /index(.html)?$) {
+                return 302 /$1;
+            }
             if ($request_uri ~ ^/(.*)\.html(\?|$)) {
                 return 302 /$1;
             }
