--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,9 @@
 events {
-
+    worker_connections 1024;
 }
 
 http {
+    include mime.types;
     server {
         server_name realja.me;
         listen 80;
