--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,36 @@
-server {
-    server_name realja.me;
-    listen 80;
-    listen [::]:80;
+events {
+    worker_connections 1024;
+}
 
-    location / {
-        if ($request_uri ~ /index(.html)?$) {
-            return 302 /$1;
+http {
+    default_type  application/octet-stream;
+    include       /etc/nginx/mime.types;
+
+    client_max_body_size 8m;
+    sendfile on;
+    keepalive_timeout 65;
+
+    gzip on;
+    gzip_min_length 1k;
+    gzip_buffers 4 16k;
+    gzip_http_version 1.1;
+    gzip_comp_level 2;
+    gzip_types text/plain application/x-javascript application/javascript text/css application/xml application/json;
+    gzip_vary on;
+
+    server {
+        server_name realja.me;
+        listen 80;
+        listen [::]:80;
+
+        location / {
+            if ($request_uri ~ /index(.html)?$) {
+                return 302 /$1;
+            }
+            if ($request_uri ~ ^/(.*)\.html(\?|$)) {
+                return 302 /$1;
+            }
+            try_files $uri $uri.html $uri/ =404;
         }
-        if ($request_uri ~ ^/(.*)\.html(\?|$)) {
-            return 302 /$1;
-        }
-        try_files $uri $uri.html $uri/ =404;
     }
 }
