--- a/nginx.conf
+++ b/nginx.conf
@@ -23,6 +23,12 @@ http {
         listen 80;
         listen [::]:80;
 
+        location ~ \.css {
+            add_header  Content-Type    text/css;
+        }
+        location ~ \.js {
+            add_header  Content-Type    application/x-javascript;
+        }
         location / {
             if ($request_uri ~ /index(.html)?$) {
                 return 302 /$1;
