--- a/nginx.conf
+++ b/nginx.conf
@@ -19,8 +19,9 @@ http {
 
     server {
         server_name realja.me;
-        listen 80;
-        listen [::]:80;
+        listen 1000;
+        # listen [::]:1000;
+        # proxy_redirect http://localhost/ http://localhost:1000/;
 
         location / {
             if ($request_uri ~ /index(.html)?$) {
@@ -28,8 +29,11 @@ http {
             }
             if ($request_uri ~ ^/(.*)\.html(\?|$)) {
                 return 302 /$1;
-            }
+            # }
             try_files $uri $uri.html $uri/ =404;
+        }
+        location /blog {
+            rewrite ^([^.]*[^/])$ $1/ permanent;
         }
     }
 }
