--- a/nginx.conf
+++ b/nginx.conf
@@ -22,7 +22,7 @@ http {
         server_name realja.me;
         listen 1000;
         # listen [::]:1000;
-        # proxy_redirect http://localhost/ http://localhost:1000/;
+        proxy_redirect http://localhost/ http://localhost:1000/;
 
         location ~ \.css {
             add_header  Content-Type    text/css;
@@ -36,11 +36,11 @@ http {
             }
             if ($request_uri ~ ^/(.*)\.html(\?|$)) {
                 return 302 /$1;
-            # }
+            }
             try_files $uri $uri.html $uri/ =404;
         }
-        location /blog {
-            rewrite ^([^.]*[^/])$ $1/ permanent;
-        }
+        # location /blog {
+        #     rewrite ^([^.]*[^/])$ $1/ permanent;
+        # }
     }
 }
