--- a/src/Gemfile
+++ b/src/Gemfile
@@ -8,17 +8,15 @@ end
 # Windows and JRuby does not include zoneinfo files, so bundle the tzinfo-data gem
 # and associated library.
 platforms :mingw, :x64_mingw, :mswin, :jruby do
-  gem "tzinfo"#, "~> 1.2"
-  gem "tzinfo-data"
+  #gem "tzinfo"#, "~> 1.2"
+  #gem "tzinfo-data"
 end
 
 # Performance-booster for watching directories on Windows
-gem "wdm", "~> 0.1.1", :platforms => [:mingw, :x64_mingw, :mswin]
+gem "wdm", :platforms => [:mingw, :x64_mingw, :mswin]
 
-# Lock `http_parser.rb` gem to `v0.6.x` on JRuby builds since newer versions of the gem
-# do not have a Java counterpart.
-gem "http_parser.rb", "~> 0.6.1", :platforms => [:jruby]
+gem "http_parser.rb"
 
 gem "webrick"#, "~> 1.7"
 
-gem "sass-embedded", "~> 1.62"
+gem "sass-embedded"#, "~> 1.62"
