--- a/src/_config.yml
+++ b/src/_config.yml
@@ -1,29 +1,9 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-
 title: realjame
 email: james@realja.me
 description: >- # this means to ignore newlines until "baseurl:"
   realjame is a personal website and blog that writes about a variety of topics: mainly tech such as web development and old Roblox games.
-baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://realja.me" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/"
+url: "https://realja.me"
 twitter_username: real__jame
 # github_username: real-jame
 
@@ -32,31 +12,19 @@ defaults:
       path: "blog"
       type: "posts"
     values:
+      section: blog
       permalink: /blog/:title.html
+  - scope:
+      path: "daily/_posts"
+      type: "posts"
+    values:
+      section: daily
+      permalink: /daily/:title.html
 future: true
 
 # Build settings
 plugins:
   - jekyll-feed
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
 
 markdown: kramdown
 kramdown:
