just about finish the project page, introduce Callouts, fix some older stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
 		"*.json.liquid": "json",
 		"*.yaml.liquid": "yaml",
 		"*.md.liquid": "markdown",
-		"*.html": "liquid"
+		"*.html": "jekyll"
 	},
 	"liquid.format.enable": true
 }
