--- a/nginx.conf
+++ b/nginx.conf
@@ -19,23 +19,14 @@ http {
     gzip_vary on;
 
     server {
-        server_name realja.me;
+        server_name localhost:1000;
         listen 1000;
         proxy_redirect http://localhost/ http://localhost:1000/;
 
-        location ~ \.css {
-            add_header  Content-Type    text/css;
-        }
-        location ~ \.js {
-            add_header  Content-Type    application/x-javascript;
+        location ~ ^/(.+)/$ {
+            return 301 $scheme://$host:1000/$1;
         }
         location / {
-            if ($request_uri ~ /index(.html)?$) {
-                return 302 /$1;
-            }
-            if ($request_uri ~ ^/(.*)\.html(\?|$)) {
-                return 302 /$1;
-            }
             try_files $uri $uri.html $uri/ =404;
         }
     }
