--- a/nginx.conf
+++ b/nginx.conf
@@ -23,9 +23,9 @@ http {
         listen 1000;
         proxy_redirect http://localhost/ http://localhost:1000/;
 
-        location ~ ^/(.+)/$ {
-            return 301 $scheme://$host:1000/$1;
-        }
+        # location ~ ^/(.+)/$ {
+        #     return 301 $scheme://$host:1000/$1;
+        # }
         location / {
             try_files $uri $uri.html $uri/ =404;
         }
