--- a/_config.yml
+++ b/_config.yml
@@ -77,3 +77,5 @@ markdown: kramdown
 kramdown:
   smart_quotes: [apos, apos, quot, quot]
   typographic_symbols: { hellip: ... }
+feed:
+  posts_limit: 30
