--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,7 @@ tagicons:
   textarea.site: "/assets/silk/page_white_edit.png"
   tech: "/assets/silk/computer.png"
   thought: "/assets/silk/heart.png"
+  bookmark: "/assets/silk/tag_blue.png"
 callouticons:
   note: "/assets/silk/note.png"
   info: "/assets/silk/information.png"
